--- a/chamados-cmc/templates/base.html
+++ b/chamados-cmc/templates/base.html
@@ -20,21 +20,21 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">CMC LDAP Login</a>
+                        <a class="navbar-brand" href="#">CMC Chamados</a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
 
                         
-                        <li><a href="/sair/">Sair</a></li>
+                        <li><a href="/autentica/sair/">Sair</a></li>
                     </ul>
                 </div>
                 </div>
             </nav>            
 
             <div class="bs-callout bs-callout-default">
-                <h4>{% block title %}CMC LDAP Login{% endblock %}</h4>
+                <h4>{% block title %}Seja bem vindo, {{ user.first_name }}{% endblock %}</h4>
             </div>
 
             {% for message in messages %}
