--- a/chamados-cmc/templates/core/index.html
+++ b/chamados-cmc/templates/core/index.html
@@ -5,6 +5,18 @@
 
 {% block content %}
 <form action="/chamado/" method="post" id="formulario">
+
+	<div class="panel panel-warning">
+		<div class="panel-heading">Teus chamados</div>
+        <div class="panel-body">
+        	<div class="row">
+                <div class="col-sm-12">
+                	<table id="tchamados" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
+                </div>
+            </div>
+        </div>
+	</div>
+
 	{% crispy form %}
 
 	<div class="col-md-12 row">
@@ -94,29 +106,37 @@
             responsive: true,
             "columns": [
                 {
-                    title: "id_chamado" ,
+                    title: "Chamado" ,
                     data: 'chamado_id'
                 },
                 {
                     title: "Aberto",
                     data: 'chamado_data_abertura'
+                    render: function(data, type, full, meta) {
+                            return '<a href="/chamado/edita/' + full.chamado_id + '/">'+ data + '</a>';
+                        }
                 },
                 {
-                    title: "Grupo",
+                    title: "Setor",
+                    data: 'chamado_setor'
+                    render: function(data, type, full, meta) {
+                            return '<a href="/chamado/edita/' + full.chamado_id + '/">'+ data + '</a>';
+                        }
+                },
+                {
+                    title: "Grupo Serviço",
                     data: 'chamado_grupo_servico'
+                    render: function(data, type, full, meta) {
+                            return '<a href="/chamado/edita/' + full.chamado_id + '/">'+ data + '</a>';
+                        }
                 },
                 {
-                    title: "Serviço",
-                    data: 'chamado_servico'
+                    title: "Status",
+                    data: 'chamado_status',
+                    render: function(data, type, full, meta) {
+                            return '<a href="/chamado/edita/' + full.chamado_id + '/">'+ data + '</a>';
+                        }
                 },
-                {
-                    title: "Assunto",
-                    data: 'chamado_assunto'
-                },
-                {
-                    title: "Solicitante",
-                    data: 'chamado_usuario'
-                }
             ],
             "columnDefs": [
                 {
@@ -139,15 +159,10 @@
                     "targets": [4],
                     "visible": true,
                 },
-                {
-                    "targets": [5],
-                    "visible": true,
-                },
-
             ],
             "language": {
                 "info": "Páginas _PAGE_ de _PAGES_",
-                "emptyTable": "Sem chamados",
+                "emptyTable": "Você nunca abriu algum chamado",
                 "decimal": ",",
                 "thousands": ".",
                 "oPaginate": {
@@ -159,13 +174,16 @@
             },
             "bPaginate" : true,
             "bLengthChange": false,
-            "bFilter": false,
+            "bFilter": true,
             "bInfo": false,
             "ajax": {
-                "url": "/fila/api/chamados_abertos/171",
+                "url": "/chamado/api/chamados_usuario/{{ user.id }}",
                 "dataSrc": "",
             },
         });
+        var tim = setInterval(function() {
+				table.ajax.reload(null, false);
+			}, 10000);
     });
 </script>
 {% endblock %}
