--- a/chamados-cmc/templates/fila/index.html
+++ b/chamados-cmc/templates/fila/index.html
@@ -43,6 +43,16 @@
         </div>
 	</div>
 
+    <div class="panel panel-primary">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <button type="button" class="btn btn-primary" onclick="javascript:criaChamado();">Criar chamado</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
 
     
@@ -58,42 +68,42 @@
 				responsive: true,
 				"columns": [
 					{ 
-						title: "id_chamado" ,
+						title: "Chamado" ,
 						data: 'chamado_id'
 					},
         			{ 
         				title: "Aberto",
         				data: 'chamado_data_abertura',
                         render: function(data, type, full, meta) {
-                            return '<a href="/fila/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
+                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
                         }
         			},
         			{ 
         				title: "Grupo",
         				data: 'chamado_grupo_servico',
                         render: function(data, type, full, meta) {
-                            return '<a href="/fila/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
+                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
                         }
         			},
         			{ 
         				title: "Serviço",
         				data: 'chamado_servico',
                         render: function(data, type, full, meta) {
-                            return '<a href="/fila/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
+                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
                         }
         			},
         			{ 
         				title: "Assunto",
         				data: 'chamado_assunto',
                         render: function(data, type, full, meta) {
-                            return '<a href="/fila/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
+                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
                         }
         			},
         			{ 
         				title: "Solicitante",
         				data: 'chamado_usuario',
                         render: function(data, type, full, meta) {
-                            return '<a href="/fila/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
+                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ data + '</a>';
                         }
         			},
                     { 
@@ -104,7 +114,7 @@
         		"columnDefs": [
         			{
         				"targets": [0],
-        	   			"visible": false,
+        	   			"visible": true,
         			},
         			{
         	   			"targets": [1],
@@ -179,7 +189,7 @@
 						data: 'fila_id'
 					},
 					{ 
-						title: "id_chamado" ,
+						title: "Chamado" ,
 						data: 'chamado_id'
 					},
         			{ 
@@ -225,7 +235,7 @@
         			},
         			{
         				"targets": [1],
-        	   			"visible": false,
+        	   			"visible": true,
         			},
         			{
         	   			"targets": [2],
@@ -373,6 +383,10 @@
             var filtro = "Filtrar chamados : <select name='filtro' id='filtro'><option value='TODOS' selected>TODOS</option><option value='ABERTO'>ABERTO</option><option value='ATENDIMENTO'>ATENDIMENTO</option><option value='FECHADO'>FECHADO</option></select>";
             $('span.filtro').empty();
             $('span.filtro').append(filtro);
+        }
+
+        function criaChamado() {
+            alert('Cria chamado');
         }
 
 
