melhorias cosmeticas e adicionando funcionalidade de novidade para o chamado

--- a/chamados-cmc/templates/core/detail.html
+++ b/chamados-cmc/templates/core/detail.html
@@ -226,7 +226,10 @@
     }
 
     function volta_fila() {
-        $(location).attr('href', '/fila/');
+        if ((document.referrer).indexOf("fila") >= 0)
+            $(location).attr('href', '/fila/');
+        else
+            $(location).attr('href', '/chamado/');
     }
 
     $('#respostaModal').on('show.bs.modal', function (event) {
