--- a/chamados-cmc/templates/base.html
+++ b/chamados-cmc/templates/base.html
@@ -25,7 +25,8 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/fila/">Fila de Chamados</a></li>
+                        <li><a href="/fila/">Atendimento</a></li>
+                        <li><a href="/chamado/">Meus chamados</a></li>
                         <li><a href="/autentica/sair/">Sair</a></li>
                     </ul>
                 </div>
