varias alteracoes, envio de email, cosmeticos, etc

--- a/chamados-cmc/templates/core/detail.html
+++ b/chamados-cmc/templates/core/detail.html
@@ -28,8 +28,12 @@
                         <div class="col-sm-10"><h4><span class="label label-default">{{ object.data_abertura|date:"d/m/Y"  }}</span></h4></div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-2"><h4>Usuário:</h4></div>
+                        <div class="col-sm-2"><h4>Solicitante:</h4></div>
                         <div class="col-sm-10"><h4><span class="label label-default">{{ object.usuario }}</span></h4></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2"><h4>Atendente:</h4></div>
+                        <div class="col-sm-10"><h4><span class="label label-default">{{ atendente }}</span></h4></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-2"><h4>Ramal:</h4></div>
